--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,6 @@
     <string name="watchlist_page_title">My Watchlist</string>
     <string name="mymovies_page_title">My Movies</string>
     <string name="movieapp_page_title">Movie App</string>
-    <string name="no_movies_found">No movies found with the selected filters</string>
     <string name="filter_movies">Filter Movies</string>
     <string name="select_language">Select Language:</string>
     <string name="select_genre">Select Genre:</string>
@@ -21,4 +20,8 @@
     <string name="filter_by_language">Filter by Language</string>
     <string name="filter_by_genre">Filter by Genre</string>
     <string name="all_options">All</string>
+    <string name="no_movies_found">No movies available!</string>
+    <string name="no_movies_suggestion">Try refreshing or adding movies to your list.</string>
+    <string name="retry">Retry</string>
+    <string name="error_loading_movies">Failed to load movies. Please check your connection.</string>
 </resources>
